# quibble

./: .gitignore  Makefile  auth_service_openapi.json  docker-compose.db.yml  docker-compose.prod.yml  docker-compose.yml  init-minio.sh  package-lock.json  package.json  pyrightconfig.json
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  lint.yml  thank-you.yml
archived-code/frontend-legacy/: package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  check_output.txt  pyproject.toml  requirements.txt
backend-v2/: .env.example  .gitignore  pyproject.toml
backend-v2/api/: auth.py  http.py  urls.py
backend-v2/api/schemas/: quib.py  quiblet.py  root.py  user.py
backend-v2/api/shared/: schemas.py
backend-v2/api/views/: auth.py  quib.py  quiblet.py  root.py  user.py
backend-v2/config/: settings.py  urls.py
backend-v2/core/: middlewares.py  mixins.py  utils.py
backend-v2/quib/: admin.py  apps.py  models.py  signals.py
backend-v2/quib/migrations/: 0001_initial.py  0002_alter_quib_slug.py  0003_alter_quib_is_published.py  0004_alter_quib_cover_small.py  0005_alter_quib_cover_small.py  0006_quibvote.py
backend-v2/quiblet/: admin.py  apps.py  managers.py  mixins.py  models.py  querysets.py  signals.py  tests.py
backend-v2/quiblet/migrations/: 0001_initial.py  0004_quib_quibvote.py  0007_remove_quiblet_members_remove_quiblet_moderators_and_more.py  0008_comment.py
backend-v2/user/: admin.py  apps.py  managers.py  models.py
backend-v2/user/migrations/: 0001_initial.py  0002_alter_customuser_options_and_more.py  0003_alter_customuser_options_alter_profile_options_and_more.py  0005_alter_profile_avatar.py  0006_alter_customuser_options.py
backend/ai_search/: api.py  apps.py  models.py  services.py  signals.py  tasks.py
backend/ai_search/migrations/: 0002_initial.py
backend/api/: auth.py  http.py  urls.py  utils.py
backend/api/schemas/: quiblet.py  root.py  user.py
backend/api/shared/: schemas.py
backend/api/views/: ai.py  auth.py  quiblet.py  root.py
backend/apps/api/: exceptions.py  http.py  utils.py
backend/apps/api/bases/: serializers.py
backend/apps/api/serializers/comment/: __init__.py
backend/apps/api/serializers/community/: __init__.py  topics.py
backend/apps/api/serializers/post/: __init__.py  highlighted.py
backend/apps/api/serializers/user/: __init__.py  auth.py
backend/apps/api/serializers/user/profile/: __init__.py  downvoted.py  overview.py  upvoted.py
backend/apps/api/views/user/: __init__.py  auth.py
backend/apps/api/viewsets/comment/: __init__.py
backend/apps/api/viewsets/community/: __init__.py  topics.py
backend/apps/api/viewsets/post/: __init__.py
backend/apps/api/viewsets/user/: __init__.py
backend/apps/comment/: admin.py  models.py
backend/apps/comment/migrations/: 0003_alter_comment_commenter_alter_comment_created_at_and_more.py
backend/apps/community/: filters.py  models.py
backend/apps/community/migrations/: 0002_initial.py  0004_alter_community_avatar_alter_community_banner_and_more.py  0005_community_nsfw_community_topics.py  0006_remove_community_is_public_community_type.py  0007_alter_community_type.py
backend/apps/post/: admin.py  managers.py  models.py
backend/apps/post/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_comments_alter_post_community_and_more.py  0005_remove_post_comments.py
backend/apps/user/: backends.py  forms.py  managers.py  models.py
backend/apps/user/migrations/: 0001_initial.py  0002_alter_profile_avatar_alter_profile_created_at_and_more.py  0003_profile_banner.py  0004_remove_profile_first_name_remove_profile_last_name_and_more.py
backend/config/: celery.py  settings.py  urls.py
backend/core/: mixins.py  settings.py  validators.py
backend/core/services/: auth.py
backend/quiblet/: admin.py  models.py  querysets.py  signals.py  tasks.py  tests.py
backend/quiblet/management/commands/: seed.py
backend/quiblet/migrations/: 0001_initial.py  0002_quiblet_banner.py  0002_quibletmember_is_favorite.py  0003_alter_quiblet_members_alter_quiblet_moderators.py  0003_quib_status.py  0004_comment_is_moderator.py  0005_alter_quib_cover_small.py  0005_rename_avatar_quiblet_avatar_url.py  0006_alter_quib_id.py  0009_commentvote.py  0010_comment_created_at.py
backend/shared/mixins/api/: reaction.py
backend/shared/mixins/models/: type.py
backend/tests/: conftest.py
backend/tests/api/: test_user_auth.py  test_user_me_profiles.py  test_user_profiles.py
backend/user/: models.py  signals.py  tests.py
backend/user/migrations/: 0001_initial.py  0003_alter_customuser_options_alter_profile_options_and_more.py  0004_profile_avatar.py
frontend/: .env.example  biome.json  next.config.ts  package-lock.json  package.json
frontend-v2/: .env.example  biome.json  next.config.ts  package-lock.json  package.json
frontend-v2/.zed/: settings.json
frontend-v2/app/: globals.css  layout.tsx  page.tsx
frontend-v2/components/: cover-card.tsx  feed.tsx  header.tsx  icons.tsx  loading.tsx  quib-card.tsx  quiblet-404.tsx  quiblet-highlights.tsx  quiblet-info.tsx  quiblet-quibs.tsx  quiblet.tsx  quibs-404.tsx  recent-quibs.tsx  scrollable.tsx
frontend-v2/constants/: api-endpoints.ts
frontend-v2/context/: auth-dialog-context.tsx
frontend-v2/hooks/: use-auth-dialog.ts  use-csrf-token.ts  use-instant-search-params.ts
frontend-v2/lib/: api-client.ts  api.ts  auth.ts  cookies.ts  fonts.ts  utils.ts
frontend-v2/providers/: auth-dialog-provider.tsx  auth-provider.tsx  providers.tsx  query-client-provider.tsx
frontend-v2/schemas/: auth.ts
frontend-v2/services/: auth.ts  comment.ts  feed.server.ts  feed.ts  quib.server.ts  quib.ts  quiblet.server.ts  quiblet.ts  search.ts  user.ts
frontend-v2/stores/: auth.ts
frontend-v2/styles/: globals.css
frontend-v2/types/: comment.ts  feed.ts  quib.ts  quiblet.ts  search.ts  user.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: cover-card.tsx  feed.tsx  legal-links.tsx  quib-skeleton.tsx  (+4 more)
legacy-frozen/: README.md
scripts/: init-minio.sh  init-rustfs.sh
(+186 files in other folders)
