[project]
name = "backend-v2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-ninja>=1.4.3",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.2",
]

[tool.pyright]
# reportAny = "none"
reportUnusedCallResult = "none"
reportUnknownVariableType = "none"
reportUnannotatedClassAttribute = "none"
