[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    # 3rd party (db URI)
    "dj-database-url>=3.0.1",
    "django>=5.2.5",
    # 3rd party (file middleware)
    "django-cleanup>=9.0.0",
    # 3rd party (cloud service)
    "django-cloudinary-storage>=0.3.0",
    # 3rd party (cors headers)
    "django-cors-headers>=4.7.0",
    # 3rd party (files)
    "django-dynamic-filenames>=1.4.0",
    # 3rd party (django filtering)
    "django-filter>=25.1",
    # 3rd party django postgres ltree extention
    "django-ltree-2>=0.1.12",
    # 3rd party (token authentication)
    "django-rest-knox>=5.0.2",
    # 3rd party (mail service)
    "django-sendgrid-v5>=1.3.0",
    # 3rd party (rest framework and plugins)
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.28.0",
    "drf-standardized-errors>=0.15.0",
    "markdown>=3.8.2",
    # first party (image)
    "pillow>=11.3.0",
    # first party (database)
    "psycopg2-binary>=2.9.10",
    # 3rd party (envs)
    "python-dotenv>=1.1.1",
    # 3rd party (semantic versioning)
    "semantic-version>=2.10.0",
    # 3rd party (uuid)
    "shortuuid>=1.0.13",
    # 3rd party (static file server)
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    # formatter
    "black>=25.1.0",
    # django extentions
    "django-extensions>=4.1",
    # profiler
    "django-silk>=5.4.2",
    # typing support
    "django-stubs>=5.2.2",
    # linter
    "flake8>=7.3.0",
    # sort imports
    "isort>=6.0.1",
    # graphs (dj-extensions)
    "pydot>=4.0.1",
    "pyparsing>=3.2.3",
    # pytest and plugins
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
]

[tool.pyright]
reportUnusedCallResult = "none"
